--- a/crm/templates/crm/home.html
+++ b/crm/templates/crm/home.html
@@ -1,4 +1,55 @@
 {% extends 'base.html' %}
+
 {% block content %}
-<h1>Hello World</h1>
+
+
+    {% if user.is_authenticated %}
+        <h1>Records</h1>
+
+        <table class="table table-dark table-hover table-bordered">
+            <thead>
+              <tr>
+                <th scope="col">id</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Address</th>
+                <th scope="col">City</th>
+                <th scope="col">Zipcode</th>
+                <th scope="col">State</th>
+                <th scope="col">Created At</th>
+              </tr>
+            </thead>
+            <tbody>
+                {% if records %}
+                {% for record in records %}
+              <tr>
+                <td><a href="{% url 'show_record' record.id %}">{{record.id}}</a></td>
+                <td>{{record.first_name}}</td>
+                <td>{{record.last_name}}</td>
+                <td>{{record.phone}}</td>
+                <td>{{record.address}}</td>
+                <td>{{record.city}}</td>
+                <td>{{record.zipcode}}</td>
+                <td>{{record.state}}</td>
+                <td>{{record.created_at}}</td>
+              </tr>
+              {% endfor %}
+              {% endif %}
+          
+
+    {% else %}
+        <h1>Login</h1>
+        <br>
+        <form action="{% url 'home' %}" method="post">
+            {% csrf_token %}
+            <div class="mb-3">
+                <input type="text" class="form-control" name="username" placeholder="Username" required>
+            </div>
+            <div class="mb-3">
+                <input type="password" class="form-control" name="password" placeholder="Password" required>
+            </div>
+            <button type="submit" class="btn btn-secondary">Login</button>
+        </form>
+{% endif %}
 {% endblock %}
